[gd_scene load_steps=20 format=2]

[ext_resource path="res://classes/GameOverPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/gameplayUi/gameOver.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://classes/gameOverMenuOptions/BackToMainMenu.gd" type="Script" id=4]
[ext_resource path="res://classes/gameOverMenuOptions/PlayAgain.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/info_box.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/menuUi/replayArrow.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/menuUi/backArrow.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/onlineFont.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://classes/MenuController.gd" type="Script" id=10]
[ext_resource path="res://assets/sfx/drop_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/confirmation_003.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/confirmation_001.ogg" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 98, 54 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 98, 0, 98, 54 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ null, null, SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "gameOver",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 9 )

[node name="GameOverPanel" type="CenterContainer"]
margin_right = 100.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterMenu" type="Control" parent="."]
margin_left = 1.0
margin_right = 99.0
margin_bottom = 104.0
rect_min_size = Vector2( 98, 104 )
script = ExtResource( 10 )
_unselectedColour = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="OuterMenu"]
position = Vector2( 49, 28 )
frames = SubResource( 3 )
animation = "gameOver"
frame = 1

[node name="Score" type="Label" parent="OuterMenu"]
visible = false
margin_top = 94.0
margin_right = 39.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
text = "SCORE"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNum" type="Label" parent="OuterMenu"]
visible = false
margin_left = 41.0
margin_top = 92.0
margin_right = 99.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "737373"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="Label" parent="OuterMenu"]
visible = false
margin_top = 77.0
margin_right = 39.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 4 )
text = "LINES"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesNum" type="Label" parent="OuterMenu"]
visible = false
margin_left = 44.0
margin_top = 75.0
margin_right = 99.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )
text = "73"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Control" parent="OuterMenu" groups=["menuOptions"]]
visible = false
margin_left = 22.0
margin_top = 64.0
margin_right = 22.0
margin_bottom = 64.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="NinePatchRect" parent="OuterMenu/PlayAgain"]
margin_left = -43.0
margin_top = 53.0
margin_right = 97.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
region_rect = Rect2( 0, -0.299653, 18, 18.2997 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="Control" parent="OuterMenu/PlayAgain"]
margin_left = -134.0
margin_top = 29.0
margin_right = 466.0
margin_bottom = 189.0
rect_min_size = Vector2( 600, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayIcon" type="TextureRect" parent="OuterMenu/PlayAgain/MarginContainer"]
margin_left = 94.0
margin_top = 31.0
margin_right = 113.0
margin_bottom = 47.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OuterMenu/PlayAgain/MarginContainer"]
margin_left = 124.0
margin_top = 37.0
margin_right = 202.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
text = "Play again"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMainMenu" type="Control" parent="OuterMenu" groups=["menuOptions"]]
visible = false
margin_left = 22.0
margin_top = 60.0
margin_right = 22.0
margin_bottom = 60.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="NinePatchRect" parent="OuterMenu/BackToMainMenu"]
margin_left = -43.0
margin_top = 91.0
margin_right = 97.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
region_rect = Rect2( 0, -0.299653, 18, 18.2997 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="Control" parent="OuterMenu/BackToMainMenu"]
margin_left = 188.0
margin_top = -47.0
margin_right = 358.0
margin_bottom = 113.0
rect_min_size = Vector2( 170, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackIcon" type="TextureRect" parent="OuterMenu/BackToMainMenu/MarginContainer"]
margin_left = -226.0
margin_top = 148.0
margin_right = -209.0
margin_bottom = 157.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OuterMenu/BackToMainMenu/MarginContainer"]
margin_left = -198.0
margin_top = 150.0
margin_right = -75.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 5 )
text = "Back to menu"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="OuterMenu"]
visible = false
anchor_top = 0.0288462
anchor_bottom = 0.0288462
margin_left = -21.0
margin_top = 186.0
margin_right = 119.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 6 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeTween" type="Tween" parent="OuterMenu"]

[node name="ChangeSfx" type="AudioStreamPlayer" parent="OuterMenu"]
stream = ExtResource( 11 )

[node name="ConfirmSfx" type="AudioStreamPlayer" parent="OuterMenu"]
stream = ExtResource( 12 )

[node name="CancelSfx" type="AudioStreamPlayer" parent="OuterMenu"]
stream = ExtResource( 13 )
